Integrate TenantService into services for organization-scoped operations